--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     </div>
   </main>    
   <footer>
-    <a href="" target="_blank">
+    <a href="https://github.com/nicofcabrera/" target="_blank">
       <i class="bi bi-github"></i>
     </a>
-    <a href="" target="_blank">
+    <a href="https://www.linkedin.com/in/nicolas-francisco-cabrera/" target="_blank">
       <i class="bi bi-linkedin"></i>
     </a>
   </footer>   
