se agrega favicon

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La mejor Hamburguesa</title>
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/128/1332/1332219.png" type="image/x-icon">
     <!-- hoja de estilos-->
     <link rel="stylesheet" href="index.css">
-</head>
+    <title>La mejor Hamburguesa</title>
+  </head>
 
 <body>
   <main>
